# cortecs-c

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  LICENSE  MODULE.bazel  README.md
.github/: autoapproval.yml  renovate.json  renovate.json5
.github/calver/: update-calver.py
.github/workflows/: approve-calver.yml  autoapproval.yml  bazel-tests.yml  daily-updates.yml  jobs.yml  local-ci.sh  update-calver.py  update-calver.yml  update-dependencies.py
.trunk/: trunk.yaml
common/: BUILD  common.h
cortecs/common/: BUILD  common.c  common.h  span.c
cortecs/common/test/: BUILD  test.c
cortecs/lexer/: BUILD  lexer.c  tokens.c  tokens.h
cortecs/lexer/test/: BUILD  exhaustive.c  exhaustive.h  fuzz.c  fuzz.h  lexer.c  test.c  test_configs.c  test_configs.h  test_impls.c  test_impls.h  tests.c  tests.h  util.c  util.h
cortecs/parser/: BUILD  ast.h  parser.c  parser.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
cortecs/parser/private/: parser.h
cortecs/parser/test/: BUILD  parser.c  tokenizer.c
docs/: components.md  functions.md  generics.md  mangling.md  monomorphization.md
flecs-integration/: BUILD  rules.c
source/: .clang-tidy
source/common/: BUILD  arrays.h  common.h  persistent_string.c  persistent_string.h
source/cortecs/arena/: BUILD  arena.c
source/cortecs/arena/public-headers/cortecs/: arena.h
source/cortecs/array/: BUILD
source/cortecs/array/public-headers/cortecs/: array.h
source/cortecs/common/: BUILD  span.c  span.h  world.c  world.h
source/cortecs/finalizer/: BUILD  finalizer.c
source/cortecs/finalizer/public-headers/cortecs/: finalizer.h
source/cortecs/function/: BUILD
source/cortecs/function/public-headers/cortecs/: function.h
source/cortecs/gc/: BUILD  gc.c  gc.h
source/cortecs/gc/public-headers/cortecs/: gc.h
source/cortecs/gc/rc/: gc.c
source/cortecs/gc/tracing/: gc.c
source/cortecs/lexer/: BUILD  lexer.c  lexer.h  span.c  tokens.c  tokens.h
source/cortecs/lexer/public-headers/cortecs/: lexer.h  span.h  tokens.h
source/cortecs/log/: BUILD  log.c
source/cortecs/log/public-headers/cortecs/: log.h
source/cortecs/lsp/: BUILD  cgen.py  lsp.c
source/cortecs/lsp/public-headers/cortecs/: lsp.h
source/cortecs/mangle/: BUILD
source/cortecs/mangle/public-headers/cortecs/: mangle.h
source/cortecs/parser/: BUILD  parser.c  parser.h
source/cortecs/parser/public-headers/cortecs/: parser.h
source/cortecs/stdlib/hashmap/: BUILD
source/cortecs/stdlib/hashmap/public-headers/cortecs/stdlib/: hashmap.h  hashmap.template.c  hashmap.template.h
source/cortecs/string/: BUILD  string.c
source/cortecs/string/public-headers/cortecs/: string.h
source/cortecs/type/: BUILD  type.c
source/cortecs/type/public-headers/cortecs/: type.h
source/cortecs/types/: BUILD  types.c
source/cortecs/types/public-headers/cortecs/: array.define.template.h  array.forward.template.h  array.template.h  ptr.template.h  types.h
source/cortecs/world/: BUILD  world.c
source/cortecs/world/public-headers/cortecs/: world.h
source/lsp/: BUILD  cgen.py  lsp.c  lsp.h
source/testing/: BUILD  foo.template.h  main.c
test/: .clang-tidy
test/common/: BUILD  test.c
test/cortecs/arena/: BUILD  test.c
test/cortecs/common/: BUILD  test.c
test/cortecs/gc/: BUILD  test.c
test/cortecs/lexer/: BUILD  test.c  test_configs.c  test_configs.h  test_impls.c  test_impls.h  test_lexer.c  test_span.c
test/cortecs/log/: BUILD  test.c
test/cortecs/stdlib/hashmap/: BUILD  test.c
test/cortecs/string/: BUILD  test.c
